fix header div spacing

--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,7 @@ h1 {
   border-radius: 15px;
   width: 40vw;
   margin: auto;
+  margin-top: 50px;
 }
 
 p {
